--- a/styles/card.scss
+++ b/styles/card.scss
@@ -36,6 +36,7 @@ $font       : white;
 
 .button {
     font-size     : 40px;
+    font-size     : clamp(30px, 5vw, 40px);
     border-radius : 0.25em;
     padding       : 0.3em .3em;
     margin        : 1em;
@@ -106,7 +107,7 @@ $font       : white;
         margin-left               : 0;
         width                     : 100%;
         justify-content           : space-between;
-        padding                   : 0 10vw;
+        padding                   : 0 clamp(0, 10vw, 200px);
         margin-top                : 4vh;
 
         .card {
