--- a/styles/styles.css
+++ b/styles/styles.css
@@ -25,10 +25,7 @@ main {
 }
 
 header {
-  display: -webkit-box !important;
-  display: -ms-flexbox !important;
-  display: flex !important;
-  opacity: 0;
+  z-index: 2;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
@@ -43,12 +40,9 @@ header {
   background: linear-gradient(0deg, rgba(44, 44, 44, 0) 0%, #2c2c2c 100%);
 }
 
-header .logo-header,
-header .header-cta {
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
-  margin-right: 4vw;
+header .cta-container {
+  padding-right: 2vw;
+  padding-top: 2vh;
 }
 
 *,
@@ -213,50 +207,6 @@ section,
 div {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-}
-
-.fd {
-  z-index: 100;
-  position: fixed;
-  margin: auto auto;
-  width: 80%;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-}
-
-.hero-text-container {
-  position: relative;
-  height: 100vh;
-}
-
-.hero-text {
-  font-family: 'Kaushan Script', cursive;
-  color: var(--highlightrosa);
-  font-size: clamp(20px, 15vw, 100px);
-  color: #FF9FD3;
-  z-index: 100;
-  position: fixed;
-}
-
-.hero-lass {
-  top: 20vh;
-  margin-right: 4vw;
-  left: 5vw;
-}
-
-.hero-deine {
-  top: 60vh;
-  right: 2vw;
-}
-
-.hero-kontakt {
-  bottom: 0;
-  right: 2vw;
-  z-index: 100;
-  position: fixed;
-  font-size: 2em;
 }
 
 .heroText,
@@ -777,5 +727,91 @@ div {
 
 .logo-use {
   display: none;
+}
+
+.fd {
+  z-index: 100;
+  position: fixed;
+  margin: auto auto;
+  width: 80%;
+  left: 0;
+  right: 0;
+  top: 30%;
+}
+
+#fd {
+  /*! margin: auto; */
+  /*! inset: 0px; */
+  /*! position: fixed; */
+}
+
+.start {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.start .hero-text {
+  height: 25%;
+  font-family: 'Kaushan Script', cursive;
+  color: var(--highlightrosa);
+  font-size: clamp(20px, 15vw, 100px);
+  color: #FF9FD3;
+  opacity: 1;
+  z-index: 100;
+  font-size: clamp(15px, 10vw, 100px);
+  font-size: clamp(50px, 7vw, 90px);
+}
+
+.start .hero-text span {
+  font-family: 'Kaushan Script', cursive;
+}
+
+.start .hero-lass {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  margin-left: 3vw;
+}
+
+.start .hero-deine {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-right: 4vw;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: end;
+  -ms-flex-line-pack: start;
+      align-content: flex-start;
+}
+
+.start .hero-kontakt {
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+  z-index: 100;
+  height: 25%;
+}
+
+.start .fd-container {
+  height: 25%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0 10vw;
 }
 /*# sourceMappingURL=styles.css.map */
