--- a/styles/card.css
+++ b/styles/card.css
@@ -57,7 +57,7 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  max-height: 60vh;
+  height: 60vh;
   width: clamp(100px, 90vw, 800px);
   position: relative;
   overflow: hidden;
