--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -8,14 +8,17 @@ $light-blue : #36a9e1;
 $font       : white;
 
 :root {
-  --clr-neon: hsl(317 100% 54%);
-  --clr-neon: #36a9e1;
-  --clr-neon: #006494;
-  --clr-neon: #1d71b8;
-  --clr-bg  : hsl(323 21% 16%);
+  --clr-neon   : hsl(317 100% 54%);
+  --clr-neon   : #36a9e1;
+  --clr-neon   : #006494;
+  --clr-neon   : #1d71b8;
+  --dark-blue  : #006494;
+  --middle-blue: #1d71b8;
+  --light-blue : #36a9e1;
+  --clr-bg     : hsl(323 21% 16%);
 
-  --highlightrosa: #FE019A;
-  --highlight    : #FF9FD3;
+  --highlight   : #FF9F9F;
+  --newhighlight: #FF9FD3;
 }
 
 //body
@@ -48,15 +51,15 @@ header {
 
   //visibility       : hidden;
   //opacity          : 0;
-  flex-direction   : row;
-  height           : 10vh;
-  position         : fixed;
-  justify-content  : space-between;
+  flex-direction      : row;
+  height              : 10vh;
+  position            : fixed;
+  justify-content     : space-between;
   //z-index        : 20;
-  width            : 100%;
-  background       : linear-gradient(0deg,
-      rgba($gray, 0) 0%,
-      rgba($gray, 1) 100%);
+  width               : 100%;
+  // background       : linear-gradient(0deg,
+  //     rgba($gray, 0) 0%,
+  //     rgba($gray, 1) 100%);
 
 
   .cta-container {
@@ -217,14 +220,33 @@ main {
     padding: 0;
   }
 
-  h3 {
-    font-family: "Raleway";
+
+
+  h2 {
+    font-size : clamp(13px, 10vw, 80px);
+    text-align: center;
+    font-family: 'Kaushan Script',
+      cursive;
+    color: var(--newhighlight);
   }
 
-  .middle {
-    color: #1d71b8;
-    fill : #1d71b8;
+  .portrait h2 {
+    font-size: 1em;
+    margin   : 10em 0;
   }
+
+  h3 {
+    color      : white;
+    padding    : 0 2vh;
+    font-weight: 600;
+    font-size  : clamp(13px, 3vw, 20px);
+
+    //font-style : italic;
+    font-family  : "Raleway";
+    //font-size  : calc(min(8vw, 60px));
+    font-weight  : 500;
+  }
+
 
   p {
     //color: rgba($light-blue, 0.6);
@@ -234,22 +256,8 @@ main {
     color      : white;
   }
 
-  h2 {
-    text-align: center;
-  }
 
-  h2,
-  h3 {
-    color      : rgba($dark-blue, 0.6);
-    columns    : $font;
-    line-height: 1em;
-    text-align : center;
-  }
 
-  h3 {
-    font-size  : calc(min(8vw, 60px));
-    font-weight: 200;
-  }
 
   section {
     min-height   : 100vh;
@@ -293,21 +301,21 @@ div {
   justify-content: flex-end;
 
   .responsive {
-    svg {
-      transform: scale(0.8);
-    }
+    // svg {
+    //   transform: scale(0.8);
+    // }
 
     position          : relative;
     background-color  : #ffdee9;
     background-image  : linear-gradient(45deg, #ffdee9 0%, #b5fffc 100%);
     //background-image: linear-gradient(45deg, $light-blue 0%, $gray 100%);
     background-image  : linear-gradient(45deg,
-      $dark-blue 0%,
-      $light-blue 20%,
-      $middle-blue 40%,
-      $light-blue 60%,
-      $dark-blue 80%,
-      $light-blue 100%);
+        $dark-blue 0%,
+        $light-blue 20%,
+        $middle-blue 40%,
+        $light-blue 60%,
+        $dark-blue 80%,
+        $light-blue 100%);
     background-position: left;
     background-size    : 800%;
     animation          : bg-animation 70s infinite;
@@ -336,14 +344,26 @@ div {
       position: absolute;
     }
 
-    h3 {
+    h2 {
       font-size: 1em;
       margin   : 3em 0;
     }
 
-    .portrait h3 {
+    .portrait h2 {
       font-size: 1em;
       margin   : 10em 0;
+    }
+
+    h3 {
+      color         : white;
+      padding       : 0 2vh;
+      font-weight   : 600;
+      font-size     : clamp(13px, 3vw, 20px);
+      align-self    : center;
+      display       : flex;
+      flex-direction: row;
+      align-items   : end;
+      font-style    : italic;
     }
 
     #ipod {
@@ -354,35 +374,38 @@ div {
     }
 
     #desktop {
-      width    : clamp(20px, 95vw, 1400px);
-      //width:50vw;
-      left     : 10vw;
-      bottom   : 0;
-      font-size: 60px;
+      width     : clamp(20px, 95vw, 1400px);
+      margin    : auto;
+      width     : 70%;
+      left      : 0;
+      right     : 0;
+      bottom    : 10vh;
+      font-size : 60px;
+      max-height: 70vh;
     }
 
     #phone {
-      display  : none;
-      width    : 10vw;
-      right    : 15vw;
-      //bottom: 0px;
-      font-size: 13px;
+      display: none;
     }
 
     #tablet {
-      width    : 14vw;
-      width    : clamp(20px, 20vw, 270px);
-      right    : 20;
-      bottom   : 0;
-      font-size: 20px;
+      width     : 14vw;
+      width     : clamp(20px, 20vw, 270px);
+      width     : 18%;
+      left      : 10vw;
+      bottom    : 3vw;
+      font-size : 20px;
+      max-height: 30vh;
     }
 
     #laptop {
-      width    : 40vw;
-      width    : clamp(20px, 90vw, 800px);
-      bottom   : 0;
-      right    : 20vw;
-      font-size: 35px;
+      width     : 40vw;
+      width     : clamp(20px, 90vw, 800px);
+      width     : 50%;
+      right     : 0vw;
+      font-size : 35px;
+      bottom    : 0;
+      max-height: 40vh;
     }
 
     #watch {
@@ -445,19 +468,21 @@ div {
 
 
     .title-container::before {
-      content         : " ";
-      display         : block;
-      position        : absolute;
-      left            : 10%;
-      top             : 20%;
+      content              : " ";
+      z-index              : -2;
+      display              : block;
+      position             : absolute;
+      // left              : 10%;
+      // top               : 20%;
       //margin:0 2vw;
-      width           : calc(100%+2vw);
-      width           : 100%;
-      height          : 50%;
-      opacity         : 0.5;
-      background-color: $gray;
-      background      : rgb(44, 44, 44);
-      background      : linear-gradient(90deg, rgba(44, 44, 44, 0) 0%, rgba(44, 44, 44, 1) 20%, rgba(44, 44, 44, 1) 80%, rgba(44, 44, 44, 0) 100%);
+      height               : 120%;
+      width                : calc(100%+2vw);
+      width                : 100%;
+      //height          : 50%;
+      opacity              : 0.5;
+      background-color     : $gray;
+      background           : rgb(44, 44, 44);
+      background           : linear-gradient(90deg, rgba(44, 44, 44, 0) 0%, rgba(44, 44, 44, 1) 20%, rgba(44, 44, 44, 1) 80%, rgba(44, 44, 44, 0) 100%);
     }
 
     .title-container {
@@ -469,8 +494,10 @@ div {
       margin-bottom  : 3vh;
       justify-content: center;
       justify-items  : flex-start;
+      padding        : 0 3em;
+      align-items    : center;
 
-      .title {
+      .titleOut {
         color         : white;
         padding       : 0 2vh;
         font-weight   : 600;
@@ -789,14 +816,17 @@ div {
 
 .fd {
   //width: 80%;
-  z-index : 100;
-  position: fixed;
-  margin  : auto auto;
-  width   : 80%;
-  left    : 0;
-  right   : 0;
-  top     : 30%;
+  z-index         : 100;
+  position        : fixed;
+  margin          : auto auto;
+  width           : 80%;
+  left            : 0;
+  right           : 0;
+  top             : 30%;
+  background-color: rgba(44, 44, 44, 0.5);
+  padding         : 5px;
 }
+
 
 #fd {
   /*! margin: auto; */
