--- a/styles/navigation.css
+++ b/styles/navigation.css
@@ -13,6 +13,8 @@ a {
 
 #navigation {
   display: none;
+  position: fixed;
+  right: 8vw;
 }
 
 #navigation ul {
@@ -20,18 +22,21 @@ a {
   display: -ms-flexbox;
   display: flex;
   font-family: "Raleway";
-  font-size: 30px;
+  font-size: clamp(20px, 2vw, 30px);
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
   list-style-type: none;
-  gap: 50px;
   -webkit-box-align: end;
       -ms-flex-align: end;
           align-items: end;
   margin-right: 5vw;
-  margin-top: 20vh;
+  margin-top: 10vh;
+  height: 50vh;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .go-up-container {
@@ -83,10 +88,6 @@ a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
   -webkit-box-pack: right;
       -ms-flex-pack: right;
           justify-content: right;
@@ -178,6 +179,7 @@ a {
 .burger {
   position: relative;
   cursor: pointer;
+  margin-left: 4vw;
 }
 
 .burger .burger-close {
@@ -243,13 +245,13 @@ a {
   right: 0;
 }
 
-.cta-button::before {
+header::before {
   content: "";
   display: inline-block;
   position: absolute;
-  right: 0;
+  left: 0;
   bottom: 0;
-  width: 100vw;
+  width: 98vw;
   height: 5px;
   border-bottom: 2px solid var(--highlightrosa);
   border-bottom: 2px solid var(--clr-neon);
