--- a/styles/navigation.scss
+++ b/styles/navigation.scss
@@ -18,18 +18,21 @@ a {
 
 #navigation {
 
-    display: none;
+    display : none;
+    position: fixed;
+    right   : 8vw;
 
     ul {
         display        : flex;
         font-family    : "Raleway";
-        font-size      : 30px;
+        font-size      : clamp(20px, 2vw, 30px);
         flex-direction : column;
         list-style-type: none;
-        gap            : 50px;
         align-items    : end;
         margin-right   : 5vw;
-        margin-top     : 20vh;
+        margin-top     : 10vh;
+        height         : 50vh;
+        justify-content: space-between;
     }
 }
 
@@ -71,11 +74,11 @@ a {
 
 .cta-container {
     //position       : fixed;
-    width             : 100%;
-    display           : flex;
-    flex-direction    : column;
-    justify-content   : right;
-    align-items       : flex-end;
+    width               : 100%;
+    display             : flex;
+    //flex-direction    : column;
+    justify-content     : right;
+    align-items         : flex-end;
     // top            : 2vh;
     // z-index        : 9999;
     // right          : 2vw;
@@ -178,6 +181,7 @@ a {
     position    : relative;
     //margin-top: 40px;
     cursor      : pointer;
+    margin-left : 4vw;
 
     .burger-close {
         // visibility   : hidden;
@@ -273,13 +277,13 @@ a {
 //     opacity: 0.5;
 // }
 
-.cta-button::before {
+header::before {
     content : "";
     display : inline-block;
     position: absolute;
-    right   : 0;
+    left    : 0;
     bottom  : 0;
-    width   : 100vw;
+    width   : 98vw;
     height  : 5px;
 
     border-bottom: 2px solid var(--highlightrosa);
