--- a/styles/styles.css
+++ b/styles/styles.css
@@ -33,22 +33,18 @@ main {
 
 header {
   z-index: 2;
+  padding: 2vh 2vw;
+  padding-bottom: .2vh;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  height: 10vh;
   position: fixed;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
   width: 100%;
   background-color: #2c2c2c;
-}
-
-header .cta-container {
-  padding-right: 2vw;
-  padding-top: 2vh;
 }
 
 *,
@@ -302,7 +298,8 @@ div {
   position: relative;
 }
 
-.tech-skills {
+.tech-skills,
+.pictures {
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -311,12 +308,26 @@ div {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  gap: 10vh;
   overflow: hidden;
 }
 
-.tech-skills .line {
+.tech-skills.tech-skills,
+.pictures.tech-skills {
+  gap: 10vh;
+}
+
+.tech-skills.tech-skills .line,
+.pictures.tech-skills .line {
   width: 400%;
+}
+
+.tech-skills.pictures .line,
+.pictures.pictures .line {
+  width: 150%;
+}
+
+.tech-skills .line,
+.pictures .line {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -584,101 +595,6 @@ div {
   position: absolute;
 }
 
-.welcomeText {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  justify-items: center;
-}
-
-.welcomeText .welcomeContainer {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  justify-items: center;
-  -ms-flex-line-pack: center;
-      align-content: center;
-  gap: 10vh;
-}
-
-.welcomeText .welcomeContainer .text {
-  z-index: 3;
-  padding: 2vh 2vw;
-}
-
-.welcomeText .welcomeContainer .image {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-item-align: center;
-      align-self: center;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-}
-
-.welcomeText .welcomeContainer .image .imgOverlay {
-  background-color: #2c2c2c;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  content: "";
-  z-index: 1;
-  opacity: 0;
-}
-
-@media screen and (min-width: 740px) {
-  .welcomeText .welcomeContainer {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    padding: 0 10vw;
-  }
-  .welcomeText .welcomeContainer .text {
-    width: 60%;
-    padding: 2vh 2vw;
-  }
-}
-
-.welcomeText .welcomeContainer .image {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-item-align: center;
-      align-self: center;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-}
-
-.welcomeText .welcomeContainer .image .imgMove {
-  overflow: hidden;
-  position: relative;
-  width: 28vw;
-  height: 28vw;
-  border-radius: 50%;
-  border: 15px solid #006494;
-}
-
-.welcomeText .welcomeContainer .image img {
-  width: 50vw;
-  position: relative;
-  right: 180px;
-}
-
 #services path,
 #shop path,
 #seo path {
@@ -700,15 +616,6 @@ div {
   mask-size: cover;
 }
 
-.contact {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
 .logo-use {
   display: none;
 }
@@ -721,7 +628,6 @@ div {
   left: 0;
   right: 0;
   top: 30%;
-  background-color: rgba(44, 44, 44, 0.5);
   padding: 5px;
 }
 
@@ -912,5 +818,63 @@ body {
   content: "";
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+}
+
+.pictures {
+  opacity: .8;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  min-height: unset;
+}
+
+.pictures img {
+  width: 100%;
+  height: auto;
+}
+
+.pictures .img {
+  position: relative;
+  width: 50%;
+}
+
+.pictures .img::before {
+  position: absolute;
+  content: "";
+  opacity: .2;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(125deg, #2c2c2c 0%, #36a9e1 100%);
+}
+
+.pictures .img-spacer {
+  width: 50%;
+  background-image: linear-gradient(125deg, #2c2c2c 0%, #36a9e1 100%);
+}
+
+.pictures h2 {
+  font-size: clamp(13px, 10vw, 40px);
+}
+
+.pictures .text {
+  width: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 0 2vw;
 }
 /*# sourceMappingURL=styles.css.map */
