--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -55,26 +55,22 @@
 
   header {
     //display : flex !important;
-    z-index: 2;
-
+    z-index               : 2;
+    padding               : 2vh 2vw;
+    padding-bottom        : .2vh;
     //visibility       : hidden;
     //opacity          : 0;
-    flex-direction      : row;
-    height              : 10vh;
-    position            : fixed;
-    justify-content     : space-between;
+    flex-direction        : row;
+    //height              : 5vh;
+    position              : fixed;
+    justify-content       : space-between;
     //z-index        : 20;
-    width               : 100%;
+    width                 : 100%;
     // background       : linear-gradient(0deg,
     //     rgba($gray, 0) 0%,
     //     rgba($gray, 1) 100%);
-    background-color    : #2c2c2c;
+    background-color      : #2c2c2c;
 
-
-    .cta-container {
-      padding-right: 2vw;
-      padding-top  : 2vh
-    }
 
     .logo-header,
     .header-cta {
@@ -353,16 +349,31 @@
     }
   }
 
-  .tech-skills {
+  .tech-skills,
+  .pictures {
     width: 100%;
 
     display       : flex;
     flex-direction: column;
-    gap           : 10vh;
-    overflow      : hidden;
+
+    &.tech-skills {
+      gap: 10vh;
+
+      .line {
+        width: 400%;
+      }
+    }
+
+    &.pictures {
+
+      .line {
+        width: 150%;
+      }
+    }
+
+    overflow : hidden;
 
     .line {
-      width          : 400%;
       display        : flex;
       justify-content: space-around;
     }
@@ -634,101 +645,7 @@
     position : absolute;
   }
 
-  .welcomeText {
-    display      : flex;
-    justify-items: center;
 
-    .welcomeContainer {
-      display       : flex;
-      flex-direction: column;
-      justify-items : center;
-      align-content : center;
-      gap           : 10vh;
-
-      .text {
-        z-index: 3;
-        padding: 2vh 2vw;
-      }
-
-      .image {
-        display        : flex;
-        align-self     : center;
-        justify-content: flex-end;
-
-        // flex-direction: column;
-        // border: 1px solid yellow;
-        img {
-          // min-width: 70vw;
-          // height: auto;
-          //opacity:0.4;
-        }
-
-        // .imgMove{
-        //     overflow: hidden;
-        //     position: relative;
-        //     width: 30vw;
-        //     height:auto;
-        //     border-radius: 50%;
-        // }
-        // .imgMove:after {
-        .imgOverlay {
-          background-color: #2c2c2c;
-          position        : absolute;
-          top             : 0;
-          bottom          : 0;
-          left            : 0;
-          right           : 0;
-          content         : "";
-          //transition: all 0.3s ease;
-          z-index         : 1;
-          opacity         : 0;
-          //transform: scaleY(2);
-        }
-      }
-
-      @media screen and (min-width: 740px) {
-        display       : flex;
-        flex-direction: row;
-        align-items   : center;
-        padding       : 0 10vw;
-
-        .text {
-          // border: 1px solid green;
-          // display: flex;
-          // flex-direction: column;
-          width  : 60%;
-          padding: 2vh 2vw;
-        }
-      }
-
-      .image {
-        display        : flex;
-        align-self     : center;
-        justify-content: flex-end;
-
-        // flex-direction: column;
-        // border: 1px solid yellow;
-        .imgMove {
-          overflow     : hidden;
-          position     : relative;
-          width        : 28vw;
-          height       : 28vw;
-          border-radius: 50%;
-          border       : 15px solid $dark-blue;
-        }
-
-        img {
-          width          : 50vw;
-          //height: 300px;
-          position       : relative;
-          right          : 180px;
-          //top:20px;
-          //border-radius: 50%;
-          //opacity:0.4;
-        }
-      }
-    }
-  }
 
   #services,
   #shop,
@@ -755,10 +672,10 @@
 
   }
 
-  .contact {
-    display        : flex;
-    justify-content: center;
-  }
+  // .contact {
+  //   display        : flex;
+  //   justify-content: center;
+  // }
 
   .logo-use {
     display: none;
@@ -768,15 +685,15 @@
 
   .fd {
     //width: 80%;
-    z-index         : 100;
-    position        : fixed;
-    margin          : auto auto;
-    width           : 80%;
-    left            : 0;
-    right           : 0;
-    top             : 30%;
-    background-color: rgba(44, 44, 44, 0.5);
-    padding         : 5px;
+    z-index           : 100;
+    position          : fixed;
+    margin            : auto auto;
+    width             : 80%;
+    left              : 0;
+    right             : 0;
+    top               : 30%;
+    //background-color: rgba(44, 44, 44, 0.5);
+    padding           : 5px;
   }
 
 
@@ -967,4 +884,51 @@
     position        : absolute;
     content         : "";
     box-sizing      : border-box;
+  }
+
+  .pictures {
+    opacity          : .8;
+    display          : flex;
+    flex-wrap        : wrap;
+    justify-content  : space-between;
+    min-height       : unset;
+    //width          : 200%;
+
+    img {
+      width : 100%;
+      height: auto;
+    }
+
+    .img {
+      position: relative;
+      width   : 50%;
+    }
+
+    .img::before {
+      position        : absolute;
+      content         : "";
+      opacity         : .2;
+      top             : 0;
+      left            : 0;
+      width           : 100%;
+      height          : 100%;
+      background-image: linear-gradient(125deg, #2c2c2c 0%, #36a9e1 100%);
+    }
+
+    .img-spacer {
+      width           : 50%;
+      background-image: linear-gradient(125deg, #2c2c2c 0%, #36a9e1 100%);
+    }
+
+    h2 {
+      font-size: clamp(13px, 10vw, 40px);
+    }
+
+    .text {
+      width          : 50%;
+      display        : flex;
+      flex-direction : column;
+      justify-content: center;
+      padding        : 0 2vw;
+    }
   }
