--- a/styles/navigation.scss
+++ b/styles/navigation.scss
@@ -348,7 +348,7 @@ footer {
     height          : 6vh;
     left            : 0;
     z-index         : 3333333;
-    background-color: var(--highlight);
+    background-color: var(--dark-blue);
     display         : flex;
     justify-content : space-around;
     align-items     : center;
