--- a/styles/card.css
+++ b/styles/card.css
@@ -19,7 +19,10 @@
   background-size: 200%;
   -webkit-animation: bg-animation 30s infinite;
           animation: bg-animation 30s infinite;
-  z-index: -444;
+}
+
+.button-background {
+  opacity: 1;
 }
 
 .button {
@@ -41,6 +44,10 @@
   position: relative;
   overflow: hidden;
   cursor: pointer;
+}
+
+.button a {
+  z-index: 3;
 }
 
 .card {
