--- a/styles/card.scss
+++ b/styles/card.scss
@@ -21,16 +21,20 @@ $font       : white;
 
 .button-background,
 .card-background {
-    position        : absolute;
-    height          : 100%;
-    width           : 100%;
-    top             : -6vh;
-    top             : 0;
-    background-image: linear-gradient(132deg, $gray 0%, $light-blue 100%);
-    opacity         : 0.5;
-    background-size : 200%;
-    animation       : bg-animation 30s infinite;
-    z-index         : -444;
+    position          : absolute;
+    height            : 100%;
+    width             : 100%;
+    top               : -6vh;
+    top               : 0;
+    background-image  : linear-gradient(132deg, $gray 0%, $light-blue 100%);
+    opacity           : 0.5;
+    background-size   : 200%;
+    animation         : bg-animation 30s infinite;
+    //z-index         : -444;
+}
+
+.button-background {
+    opacity: 1;
 }
 
 .button {
@@ -45,6 +49,10 @@ $font       : white;
     position      : relative;
     overflow      : hidden;
     cursor        : pointer;
+
+    a {
+        z-index: 3;
+    }
 }
 
 .card {
