--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,8 +8,6 @@
   --middle-blue: #1d71b8;
   --light-blue: #36a9e1;
   --clr-bg: hsl(323 21% 16%);
-  --highlight: #D0FDEA;
-  --newhighlight: #FF9F9F;
   --highlight: #FF9F9F;
   --newhighlight: #D0FDEA;
 }
@@ -27,14 +25,9 @@ footer {
   min-height: 20vh;
 }
 
-main {
-  z-index: 1;
-}
-
 header {
-  z-index: 2;
   padding: 2vh 2vw;
-  padding-bottom: .2vh;
+  padding-bottom: 0.2vh;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
@@ -43,8 +36,9 @@ header {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  z-index: 20;
   width: 100%;
-  background-color: #2c2c2c;
+  background-color: rgba(44, 44, 44, 0.95);
 }
 
 *,
@@ -87,7 +81,7 @@ main * {
 }
 
 main h2 {
-  font-size: clamp(13px, 10vw, 80px);
+  font-size: clamp(13px, 8vw, 60px);
   text-align: center;
   font-family: 'Kaushan Script', cursive;
   color: var(--newhighlight);
@@ -539,11 +533,9 @@ div {
   font-size: 1.5em;
   font-weight: 600;
   cursor: pointer;
-  z-index: 999999;
 }
 
 .service-container .more {
-  z-index: 800000;
   cursor: pointer;
   position: absolute;
   bottom: 5%;
@@ -656,7 +648,6 @@ div {
   font-size: clamp(20px, 15vw, 100px);
   color: var(--newhighlight);
   opacity: 1;
-  z-index: 100;
   font-size: clamp(15px, 10vw, 100px);
   font-size: clamp(30px, 7vw, 90px);
 }
@@ -876,5 +867,47 @@ body {
       -ms-flex-pack: center;
           justify-content: center;
   padding: 0 2vw;
+}
+
+#special-offer {
+  position: relative;
+}
+
+#special-offer .star {
+  position: absolute;
+  top: 20vh;
+  width: 30vw;
+}
+
+#special-offer .date {
+  color: var(--light-blue);
+  text-align: center;
+  margin-bottom: 3vh;
+}
+
+#special-offer .special-offer-card {
+  background: var(--highlight);
+  width: 80%;
+  margin: auto;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 0;
+  background: rgba(54, 169, 225, 0.25);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+  border-radius: 10px;
+  gap: 10vh;
+}
+
+#special-offer .special-offer-card .offer {
+  font-size: clamp(20px, 4vw, 40px);
+  color: var(--light-blue);
+}
+
+#special-offer .special-offer-card .price {
+  font-size: clamp(20px, 4vw, 40px);
+  font-family: 'Kaushan Script', cursive;
+  color: var(--newhighlight);
 }
 /*# sourceMappingURL=styles.css.map */
