--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -22,8 +22,8 @@
 
     //--newhighlight  : #9FE2FF;
     //--newhighlight: #B29FFF
-    --highlight   : #D0FDEA;
-    --newhighlight: #FF9F9F;
+    // --highlight   : #D0FDEA;
+    // --newhighlight: #FF9F9F;
     --highlight   : #FF9F9F;
     --newhighlight: #D0FDEA;
   }
@@ -50,26 +50,26 @@
   // }
 
   main {
-    z-index: 1
+    //z-index: 1
   }
 
   header {
     //display : flex !important;
-    z-index               : 2;
+    // z-index               : 2;
     padding               : 2vh 2vw;
-    padding-bottom        : .2vh;
+    padding-bottom        : 0.2vh;
     //visibility       : hidden;
     //opacity          : 0;
     flex-direction        : row;
     //height              : 5vh;
     position              : fixed;
     justify-content       : space-between;
-    //z-index        : 20;
+    z-index               : 20;
     width                 : 100%;
     // background       : linear-gradient(0deg,
     //     rgba($gray, 0) 0%,
     //     rgba($gray, 1) 100%);
-    background-color      : #2c2c2c;
+    background-color      : rgba(44, 44, 44, .95);
 
 
     .logo-header,
@@ -139,7 +139,7 @@
 
 
     h2 {
-      font-size : clamp(13px, 10vw, 80px);
+      font-size : clamp(13px, 8vw, 60px);
       text-align: center;
       font-family: 'Kaushan Script',
         cursive;
@@ -565,17 +565,17 @@
     }
 
     .clickable {
-      color           : var(--highlight) !important;
-      background-image: none;
-      font-size       : 35px;
-      font-size       : 1.5em;
-      font-weight     : 600;
-      cursor          : pointer;
-      z-index         : 999999;
+      color             : var(--highlight) !important;
+      background-image  : none;
+      font-size         : 35px;
+      font-size         : 1.5em;
+      font-weight       : 600;
+      cursor            : pointer;
+      //z-index         : 999999;
     }
 
     .more {
-      z-index: 800000;
+      //z-index: 800000;
 
       cursor   : pointer;
       position : absolute;
@@ -730,7 +730,7 @@
       color     : var(--newhighlight);
       opacity   : 1;
 
-      z-index   : 100;
+      //z-index   : 100;
       font-size : clamp(15px, 10vw, 100px);
       font-size : clamp(30px, 7vw, 90px);
       //position: fixed;
@@ -930,5 +930,50 @@
       flex-direction : column;
       justify-content: center;
       padding        : 0 2vw;
+    }
+  }
+
+  #special-offer {
+    position: relative;
+
+    .star {
+      position: absolute;
+      top     : 20vh;
+      width   : 30vw;
+    }
+
+    .date {
+      color        : var(--light-blue);
+      text-align   : center;
+      margin-bottom: 3vh;
+    }
+
+    .special-offer-card {
+      // border                   : solid 2px var(--highlight);
+      background                 : var(--highlight);
+      //font-weight              : 600;
+      width                      : 80%;
+      margin                     : auto;
+      justify-content            : center;
+      padding                    : 0;
+      background                 : rgba(#36A9E1, 0.25);
+      //box-shadow             : 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+      backdrop-filter            : blur(4px);
+      -webkit-backdrop-filter    : blur(4px);
+      border-radius              : 10px;
+      //border                 : 1px solid rgba(255, 255, 255, 0.18);
+      gap                        : 10vh;
+
+      .offer {
+        font-size: clamp(20px, 4vw, 40px);
+        color    : var(--light-blue);
+      }
+
+      .price {
+        font-size: clamp(20px, 4vw, 40px);
+        font-family: 'Kaushan Script',
+          cursive;
+        color: var(--newhighlight)
+      }
     }
   }
