--- a/styles/navigation.css
+++ b/styles/navigation.css
@@ -30,7 +30,7 @@ a {
   list-style-type: none;
   -webkit-box-align: end;
       -ms-flex-align: end;
-          align-items: end;
+          align-items: flex-end;
   margin-right: 5vw;
   margin-top: 10vh;
   height: 50vh;
@@ -88,12 +88,9 @@ a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: right;
-      -ms-flex-pack: right;
-          justify-content: right;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
 }
 
 .cta-container .cta-button,
