--- a/styles/navigation.scss
+++ b/styles/navigation.scss
@@ -28,7 +28,7 @@ a {
         font-size      : clamp(20px, 2vw, 30px);
         flex-direction : column;
         list-style-type: none;
-        align-items    : end;
+        align-items    : flex-end;
         margin-right   : 5vw;
         margin-top     : 10vh;
         height         : 50vh;
@@ -77,8 +77,7 @@ a {
     width               : 100%;
     display             : flex;
     //flex-direction    : column;
-    justify-content     : right;
-    align-items         : flex-end;
+    justify-content     : flex-end;
     // top            : 2vh;
     // z-index        : 9999;
     // right          : 2vw;
