--- a/styles/styles.css
+++ b/styles/styles.css
@@ -110,7 +110,7 @@ main p {
 }
 
 main section {
-  min-height: 100vh;
+  min-height: 80vh;
   margin-bottom: 30vh;
 }
 
@@ -675,9 +675,9 @@ div {
       flex-wrap: wrap;
   -webkit-box-pack: end;
       -ms-flex-pack: end;
-          justify-content: end;
-  -ms-flex-line-pack: start;
-      align-content: flex-start;
+          justify-content: flex-end;
+  -ms-flex-line-pack: end;
+      align-content: flex-end;
 }
 
 .start .hero-kontakt {
