--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -177,8 +177,10 @@
 
 
     section {
-      min-height   : 100vh;
-      margin-bottom: 30vh;
+
+      min-height      : 80vh;
+      // margin-top   : 20vh;
+      margin-bottom   : 30vh;
     }
   }
 
@@ -752,8 +754,8 @@
       // align-items : flex-start;
       margin-right   : 4vw;
       flex-wrap      : wrap;
-      justify-content: end;
-      align-content  : flex-start;
+      justify-content: flex-end;
+      align-content  : flex-end;
     }
 
     .hero-kontakt {
