--- a/styles/card.scss
+++ b/styles/card.scss
@@ -34,7 +34,9 @@ $font       : white;
 }
 
 .button-background {
-    opacity: 1;
+    opacity         : 1;
+    background-image: linear-gradient(132deg, $gray 0%, $dark-blue 100%);
+    font-weight     : 500;
 }
 
 .button {
