--- a/styles/navigation.css
+++ b/styles/navigation.css
@@ -91,6 +91,9 @@ a {
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .cta-container .cta-button,
@@ -342,6 +345,10 @@ footer {
 @media screen and (max-width: 500px) {
   .header-cta {
     display: none;
+  }
+  #main section {
+    min-height: 86vh;
+    height: 86vh;
   }
 }
 /*# sourceMappingURL=navigation.css.map */
