--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -51,25 +51,37 @@
 
   main {
     //z-index: 1
+
+    .dark {
+      color: $dark-blue;
+    }
+
+    .light {
+      color: $light-blue;
+    }
+
+    .middle {
+      color: $middle-blue;
+    }
   }
 
   header {
-    //display : flex !important;
+    display                  : flex !important;
     // z-index               : 2;
-    padding               : 2vh 2vw;
-    padding-bottom        : 0.2vh;
+    padding                  : 2vh 2vw;
+    padding-bottom           : 0;
     //visibility       : hidden;
     //opacity          : 0;
-    flex-direction        : row;
-    //height              : 5vh;
-    position              : fixed;
-    justify-content       : space-between;
-    z-index               : 20;
-    width                 : 100%;
+    flex-direction           : row;
+    height                   : 8vh;
+    position                 : fixed;
+    justify-content          : space-between;
+    z-index                  : 20;
+    width                    : 100%;
     // background       : linear-gradient(0deg,
     //     rgba($gray, 0) 0%,
     //     rgba($gray, 1) 100%);
-    background-color      : rgba(44, 44, 44, .95);
+    background-color         : rgba(44, 44, 44, .95);
 
 
     .logo-header,
@@ -178,9 +190,9 @@
 
     section {
 
-      min-height      : 80vh;
-      // margin-top   : 20vh;
-      margin-bottom   : 30vh;
+      min-height          : 92vh;
+      //margin-top        : 8vh;
+      margin-bottom       : 30vh;
     }
   }
 
@@ -240,7 +252,7 @@
       animation          : bg-animation 70s infinite;
 
       //width: 80%;
-      height    : 100vh;
+      height    : 100%;
       // padding: 2vh 2vw;
       z-index   : -2;
 
@@ -687,15 +699,18 @@
 
   .fd {
     //width: 80%;
-    z-index           : 100;
-    position          : fixed;
-    margin            : auto auto;
-    width             : 80%;
-    left              : 0;
-    right             : 0;
-    top               : 30%;
+    z-index                   : 100;
+    //position             : absolute;
+    // position          : fixed;
+    // margin            : auto auto;
+    // width             : 80%;
+    // left              : 0;
+    // right             : 0;
+    // top               : 30%;
     //background-color: rgba(44, 44, 44, 0.5);
-    padding           : 5px;
+    // padding                : 5px;
+    width                     : clamp(20px, 80vw, 350px);
+
   }
 
 
@@ -750,12 +765,12 @@
 
     .hero-deine {
       //align-self  : end;
-      display        : flex;
+      display          : flex;
       // align-items : flex-start;
-      margin-right   : 4vw;
-      flex-wrap      : wrap;
-      justify-content: flex-end;
-      align-content  : flex-end;
+      margin-right     : 4vw;
+      flex-wrap        : wrap;
+      justify-content  : flex-end;
+      //align-content  : flex-end;
     }
 
     .hero-kontakt {
@@ -902,8 +917,10 @@
     }
 
     .img {
-      position: relative;
-      width   : 50%;
+      position : relative;
+      width    : 50%;
+      min-width: 150px;
+      ;
     }
 
     .img::before {
@@ -932,6 +949,10 @@
       flex-direction : column;
       justify-content: center;
       padding        : 0 2vw;
+
+      p {
+        font-size: clamp(12px, 2vw, 18px);
+      }
     }
   }
 
