--- a/styles/navigation.scss
+++ b/styles/navigation.scss
@@ -286,8 +286,8 @@ header::before {
     width   : 98vw;
     height  : 5px;
 
-    border-bottom: 2px solid var(--highlightrosa);
-    border-bottom: 2px solid var(--clr-neon);
+    // border-bottom: 2px solid var(--highlightrosa);
+    // border-bottom: 2px solid var(--clr-neon);
 }
 
 footer {
