--- a/styles/card.css
+++ b/styles/card.css
@@ -93,9 +93,6 @@
 }
 
 #services .tiles .services {
-  width: 70%;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
   gap: 2vw;
   margin-left: 0;
   width: 100%;
@@ -104,6 +101,8 @@
           justify-content: space-between;
   padding: 0 clamp(0, 10vw, 200px);
   margin-top: 4vh;
+  position: fixed;
+  top: 43vh;
 }
 
 #services .tiles .services .card {
