--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,7 +13,7 @@
 }
 
 body {
-  background: #2c2c2c;
+  background: #006494;
   position: relative;
   height: 100vh;
   margin: 0;
@@ -54,7 +54,6 @@ header {
           justify-content: space-between;
   z-index: 20;
   width: 100%;
-  background-color: rgba(44, 44, 44, 0.95);
 }
 
 *,
@@ -99,9 +98,15 @@ main * {
 main h2 {
   font-size: clamp(13px, 8vw, 60px);
   text-align: center;
-  font-family: 'Kaushan Script', cursive;
-  color: var(--newhighlight);
+  color: white;
   margin-bottom: 10vh;
+  position: fixed;
+  top: 20vh;
+  left: 0;
+  right: 0;
+  margin: auto;
+  opacity: 0;
+  visibility: hidden;
 }
 
 main .portrait h2 {
@@ -128,6 +133,8 @@ main p {
 main section {
   min-height: 92vh;
   margin-bottom: 30vh;
+  z-index: 9;
+  position: relative;
 }
 
 section,
@@ -308,6 +315,10 @@ div {
   position: relative;
 }
 
+#technologien {
+  height: 200vh;
+}
+
 .tech-skills,
 .pictures {
   width: 100%;
@@ -324,11 +335,29 @@ div {
 .tech-skills.tech-skills,
 .pictures.tech-skills {
   gap: 10vh;
+  position: fixed;
+  top: 30vh;
+  height: 50vh;
 }
 
 .tech-skills.tech-skills .line,
 .pictures.tech-skills .line {
   width: 400%;
+  margin-left: -200vw;
+}
+
+.tech-skills.tech-skills .line.second,
+.pictures.tech-skills .line.second {
+  margin-left: -250vh;
+}
+
+.tech-skills.tech-skills .icon-wraper,
+.pictures.tech-skills .icon-wraper {
+  background-color: rgba(0, 0, 0, 0.76);
+  border-radius: 50%;
+  padding: 25px;
+  opacity: 0;
+  visibility: hidden;
 }
 
 .tech-skills.pictures .line,
@@ -353,6 +382,10 @@ div {
   background-image: -webkit-gradient(linear, left top, left bottom, from(#36a9e1), to(#006494));
   background-image: linear-gradient(#36a9e1, #006494);
   -webkit-text-fill-color: transparent;
+}
+
+#services {
+  z-index: 2;
 }
 
 .service-container {
@@ -568,11 +601,10 @@ div {
   background-image: linear-gradient(132deg, #f4d03f 0%, #16a085 100%);
   background-color: #ff9a8b;
   background-image: linear-gradient(45deg, #ff9a8b 0%, #ff6a88 55%, #ff99ac 100%);
-  opacity: 0.5;
+  opacity: 0.9;
   background-size: 200%;
   -webkit-animation: bg-animation 30s infinite;
           animation: bg-animation 30s infinite;
-  z-index: -444;
 }
 
 .service-d .moving-background {
@@ -624,6 +656,81 @@ div {
   mask-size: cover;
 }
 
+.contact {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  z-index: unset;
+  margin-top: 50vh;
+}
+
+.contact .container {
+  background: black;
+  height: 200px;
+  color: #385c7c;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  padding: 2vw;
+  background: #b7faf7;
+  mix-blend-mode: luminosity;
+  font-size: 18px;
+  letter-spacing: 2px;
+  color: #ff00cb;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background: transparent;
+  position: fixed;
+  top: 50vh;
+  width: 40%;
+}
+
+.contact .container > div {
+  font-weight: 500;
+  line-height: 30px;
+  padding: 0 5px;
+  color: white;
+  margin-bottom: 5px;
+}
+
+.contact .container > div a {
+  color: white;
+}
+
+.contact .button-background,
+.contact .card-background {
+  background: #155964 none repeat scroll 0% 0%;
+  mix-blend-mode: difference;
+  opacity: 1;
+  -webkit-animation: none;
+          animation: none;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background: #f65050f5;
+  mix-blend-mode: color-burn;
+  position: fixed;
+  top: 50vh;
+  width: 80%;
+  height: 20vh;
+}
+
+.contact .card {
+  mix-blend-mode: inherit;
+  border-radius: 0;
+}
+
 .logo-use {
   display: none;
 }
@@ -634,9 +741,8 @@ div {
 }
 
 #fd {
-  /*! margin: auto; */
-  /*! inset: 0px; */
-  /*! position: fixed; */
+  background: rgba(0, 0, 0, 0.911);
+  padding: 5vh;
 }
 
 .start {
@@ -659,7 +765,7 @@ div {
   color: var(--newhighlight);
   opacity: 1;
   font-size: clamp(15px, 10vw, 100px);
-  font-size: clamp(30px, 7vw, 90px);
+  font-size: clamp(18px, 7vw, 90px);
 }
 
 .start .hero-text span {
@@ -696,7 +802,6 @@ div {
 }
 
 .start .fd-container {
-  height: 25%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -704,6 +809,12 @@ div {
       -ms-flex-align: center;
           align-items: center;
   padding: 0 10vw;
+}
+
+@media screen and (min-width: 500px) {
+  .start .fd-container {
+    height: 25%;
+  }
 }
 
 body {
@@ -820,7 +931,6 @@ body {
 }
 
 .pictures {
-  opacity: .8;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -834,7 +944,10 @@ body {
 
 .pictures img {
   width: 100%;
-  height: auto;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  opacity: 0.8;
 }
 
 .pictures .img {
@@ -856,7 +969,6 @@ body {
 
 .pictures .img-spacer {
   width: 50%;
-  background-image: linear-gradient(125deg, #2c2c2c 0%, #36a9e1 100%);
 }
 
 .pictures h2 {
@@ -876,10 +988,73 @@ body {
       -ms-flex-pack: center;
           justify-content: center;
   padding: 0 2vw;
+  background-image: linear-gradient(125deg, #00070bf7 0%, #005882 100%);
 }
 
 .pictures .text p {
   font-size: clamp(12px, 2vw, 18px);
+}
+
+.fd-content-text {
+  width: 40%;
+  padding: 5rem;
+  background: black;
+  position: fixed;
+  inset: 0;
+  margin: auto;
+  color: white;
+  word-spacing: 1;
+  letter-spacing: .3px;
+  background: #000000eb;
+  letter-spacing: 1.7px;
+  line-height: 2;
+  height: 50%;
+}
+
+.fd-content-text .text-1 {
+  width: 40%;
+  padding: 5rem;
+  background: black;
+  position: relative;
+}
+
+section#fd-content {
+  z-index: unset;
+}
+
+section#fd-content .fd-content-container {
+  background-color: #00070be8;
+  z-index: 999999999;
+  position: absolute;
+  width: 80%;
+  padding: 200px;
+  color: white;
+  line-height: 2;
+  font-size: 18px;
+  word-spacing: 1px;
+  letter-spacing: 1px;
+  background: #7897aa;
+  mix-blend-mode: difference;
+  height: 50vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+
+section#fd-content .fd-content-container .text::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: black;
 }
 
 #special-offer {
@@ -946,5 +1121,109 @@ body {
   font-size: clamp(20px, 4vw, 40px);
   font-family: 'Kaushan Script', cursive;
   color: var(--newhighlight);
+}
+
+.outer {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
+  -ms-grid-rows: (100vh)[2];
+      grid-template-rows: repeat(2, 100vh);
+      grid-template-areas: "one" "two";
+}
+
+#one {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: one;
+  background-size: cover;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[4];
+      grid-template-columns: repeat(4, 1fr);
+  -ms-grid-rows: (1fr)[4];
+      grid-template-rows: repeat(4, 1fr);
+  position: relative;
+}
+
+#one,
+#two {
+  background-image: url("https://images.unsplash.com/photo-1458432449677-469b01f8ed08?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80");
+  background-image: url("/images/hamburg_2013_0485.JPG");
+}
+
+#two {
+  -ms-grid-row: 2;
+  -ms-grid-column: 1;
+  grid-area: two;
+  display: -ms-grid;
+  display: grid;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
+  -ms-grid-columns: (1fr)[4];
+      grid-template-columns: repeat(4, 1fr);
+  -ms-grid-rows: (1fr)[4];
+      grid-template-rows: repeat(4, 1fr);
+  position: relative;
+}
+
+#mask-one {
+  background: linear-gradient(-15deg, blue 50%, #000 0%);
+  background: linear-gradient(-15deg, #055c87 50%, #000 0%);
+  height: 100%;
+  grid-column: 1 / -1;
+  grid-row: 1 / -1;
+  mix-blend-mode: multiply;
+}
+
+#mask-two {
+  background: linear-gradient(-15deg, #000 50%, blue 0%);
+  background: linear-gradient(-15deg, #000 50%, #055c87 0%);
+  height: 100%;
+  grid-column: 1 / -1;
+  grid-row: 1 / -1;
+  mix-blend-mode: multiply;
+  z-index: 2;
+  pointer-events: none;
+}
+
+#statue {
+  background-image: url("https://www.snipstock.com/assets/cdn/png/d639517334df1db855d49d4f8e1828c5.png");
+  background-image: url("/images/hamburg_2013_0499.JPG");
+  background-image: url("/images/hamburg_2013_0868.webp");
+  background-size: contain;
+  background-attachment: fixed;
+  height: 100%;
+  width: 100%;
+  grid-column: 1 / -1;
+  grid-row: 1 / -1;
+  background-repeat: no-repeat;
+  z-index: 1;
+  -webkit-transition: background-position 0.2s linear;
+  transition: background-position 0.2s linear;
+  position: relative;
+}
+
+.background-image {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  mix-blend-mode: luminosity;
+  -o-object-fit: cover;
+     object-fit: cover;
+  pointer-events: none;
+}
+
+.background-image.foreground {
+  z-index: 3;
+}
+
+#special-offer,
+.hero {
+  display: none;
 }
 /*# sourceMappingURL=styles.css.map */
