--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -30,7 +30,7 @@
 
   //body
   body {
-    background : $gray;
+    background : $dark-blue;
     //padding: 2vh 6vw;
     position   : relative;
     height     : 100vh;
@@ -66,22 +66,22 @@
   }
 
   header {
-    display                  : flex !important;
+    display                    : flex !important;
     // z-index               : 2;
-    padding                  : 2vh 2vw;
-    padding-bottom           : 0;
+    padding                    : 2vh 2vw;
+    padding-bottom             : 0;
     //visibility       : hidden;
     //opacity          : 0;
-    flex-direction           : row;
-    height                   : 8vh;
-    position                 : fixed;
-    justify-content          : space-between;
-    z-index                  : 20;
-    width                    : 100%;
+    flex-direction             : row;
+    height                     : 8vh;
+    position                   : fixed;
+    justify-content            : space-between;
+    z-index                    : 20;
+    width                      : 100%;
     // background       : linear-gradient(0deg,
     //     rgba($gray, 0) 0%,
     //     rgba($gray, 1) 100%);
-    background-color         : rgba(44, 44, 44, .95);
+    //background-color         : rgba(44, 44, 44, .95);
 
 
     .logo-header,
@@ -151,12 +151,19 @@
 
 
     h2 {
-      font-size : clamp(13px, 8vw, 60px);
-      text-align: center;
-      font-family: 'Kaushan Script',
-        cursive;
-      color        : var(--newhighlight);
-      margin-bottom: 10vh;
+      font-size     : clamp(13px, 8vw, 60px);
+      text-align    : center;
+      // font-family: 'Kaushan Script',
+      //   cursive;
+      color         : white;
+      margin-bottom : 10vh;
+      position      : fixed;
+      top           : 20vh;
+      left          : 0;
+      right         : 0;
+      margin        : auto;
+      opacity       : 0;
+      visibility    : hidden;
     }
 
     .portrait h2 {
@@ -193,6 +200,8 @@
       min-height          : 92vh;
       //margin-top        : 8vh;
       margin-bottom       : 30vh;
+      z-index             : 9;
+      position            : relative;
     }
   }
 
@@ -363,6 +372,10 @@
     }
   }
 
+  #technologien {
+    height: 200vh;
+  }
+
   .tech-skills,
   .pictures {
     width: 100%;
@@ -371,10 +384,27 @@
     flex-direction: column;
 
     &.tech-skills {
-      gap: 10vh;
+      gap     : 10vh;
+      position: fixed;
+      top     : 30vh;
+      height  : 50vh;
+
 
       .line {
-        width: 400%;
+        width      : 400%;
+        margin-left: -200vw;
+
+        &.second {
+          margin-left: -250vh
+        }
+      }
+
+      .icon-wraper {
+        background-color: rgba(0, 0, 0, 0.76);
+        border-radius   : 50%;
+        padding         : 25px;
+        opacity         : 0;
+        visibility      : hidden;
       }
     }
 
@@ -400,6 +430,12 @@
     font-size              : 3em;
     background-image       : linear-gradient($light-blue, $dark-blue);
     -webkit-text-fill-color: transparent;
+
+
+  }
+
+  #services {
+    z-index: 2;
   }
 
   .service-container {
@@ -611,10 +647,10 @@
         #ff9a8b 0%,
         #ff6a88 55%,
         #ff99ac 100%);
-    opacity        : 0.5;
-    background-size: 200%;
-    animation      : bg-animation 30s infinite;
-    z-index        : -444;
+    opacity          : 0.9;
+    background-size  : 200%;
+    animation        : bg-animation 30s infinite;
+    //z-index        : -444;
   }
 
   .service-d {
@@ -686,10 +722,68 @@
 
   }
 
-  // .contact {
-  //   display        : flex;
-  //   justify-content: center;
-  // }
+  .contact {
+    display          : flex;
+    justify-content  : center;
+    z-index          : unset;
+    margin-top       : 50vh;
+    //height         : 400vh;
+
+    .container {
+      background         : black;
+      height             : 200px;
+      color              : #385c7c;
+      display            : flex;
+      flex-direction     : column;
+      align-items        : flex-start;
+      //justify-content  : space-evenly;
+      padding            : 2vw;
+      background         : #b7faf7;
+      mix-blend-mode     : luminosity;
+      font-size          : 18px;
+      letter-spacing     : 2px;
+      color              : #ff00cb;
+      align-items        : center;
+      background         : transparent;
+      //mix-blend-mode : color-burn;
+      position           : fixed;
+      top                : 50vh;
+      width              : 40%;
+
+      >div {
+        // background   : #669ac8;
+        font-weight  : 500;
+        line-height  : 30px;
+        padding      : 0 5px;
+        color        : white;
+        margin-bottom: 5px;
+
+        a {
+          color: white;
+        }
+      }
+    }
+
+    .button-background,
+    .card-background {
+      background    : rgb(21, 89, 100) none repeat scroll 0% 0%;
+      mix-blend-mode: difference;
+      opacity       : 1;
+      animation     : none;
+      align-items   : center;
+      background    : #f65050f5;
+      mix-blend-mode: color-burn;
+      position      : fixed;
+      top           : 50vh;
+      width         : 80%;
+      height        : 20vh;
+    }
+
+    .card {
+      mix-blend-mode: inherit;
+      border-radius : 0;
+    }
+  }
 
   .logo-use {
     display: none;
@@ -713,11 +807,9 @@
 
   }
 
-
   #fd {
-    /*! margin: auto; */
-    /*! inset: 0px; */
-    /*! position: fixed; */
+    background: rgba(0, 0, 0, 0.911);
+    padding   : 5vh;
   }
 
   .start {
@@ -749,7 +841,7 @@
 
       //z-index   : 100;
       font-size : clamp(15px, 10vw, 100px);
-      font-size : clamp(30px, 7vw, 90px);
+      font-size : clamp(18px, 7vw, 90px);
       //position: fixed;
 
     }
@@ -781,12 +873,17 @@
     }
 
     .fd-container {
-      height     : 25%;
+      // height: ;
       display    : flex;
       align-items: center;
       padding    : 0 10vw;
     }
 
+    @media screen and (min-width: 500px) {
+      .fd-container {
+        height: 25%;
+      }
+    }
 
 
     .frieDevelopment {}
@@ -904,7 +1001,7 @@
   }
 
   .pictures {
-    opacity          : .8;
+    //opacity          : .8;
     display          : flex;
     flex-wrap        : wrap;
     justify-content  : space-between;
@@ -912,8 +1009,10 @@
     //width          : 200%;
 
     img {
-      width : 100%;
-      height: auto;
+      width     : 100%;
+      height    : 100%;
+      object-fit: cover;
+      opacity   : 0.8;
     }
 
     .img {
@@ -935,8 +1034,8 @@
     }
 
     .img-spacer {
-      width           : 50%;
-      background-image: linear-gradient(125deg, #2c2c2c 0%, #36a9e1 100%);
+      width: 50%;
+
     }
 
     h2 {
@@ -944,14 +1043,73 @@
     }
 
     .text {
-      width          : 50%;
-      display        : flex;
-      flex-direction : column;
-      justify-content: center;
-      padding        : 0 2vw;
+      width           : 50%;
+      display         : flex;
+      flex-direction  : column;
+      justify-content : center;
+      padding         : 0 2vw;
+      background-image: linear-gradient(125deg, #00070bf7 0%, #005882 100%);
 
       p {
         font-size: clamp(12px, 2vw, 18px);
+      }
+    }
+  }
+
+  .fd-content-text {
+    width         : 40%;
+    padding       : 5rem;
+    background    : black;
+    position      : fixed;
+    inset         : 0;
+    margin        : auto;
+    color         : white;
+    word-spacing  : 1;
+    letter-spacing: .3px;
+    background    : #000000eb;
+    letter-spacing: 1.7px;
+    line-height   : 2;
+    height        : 50%;
+
+    .text-1 {
+      width     : 40%;
+      padding   : 5rem;
+      background: black;
+      position  : relative;
+    }
+  }
+
+  section#fd-content {
+
+    z-index: unset;
+
+    .fd-content-container {
+      background-color: #00070be8;
+      z-index         : 999999999;
+      position        : absolute;
+      width           : 80%;
+      padding         : 200px;
+      color           : white;
+      line-height     : 2;
+      font-size       : 18px;
+      word-spacing    : 1px;
+      letter-spacing  : 1px;
+      background      : #7897aa;
+      mix-blend-mode  : difference;
+      height          : 50vh;
+      display         : flex;
+      justify-content : flex-end;
+      align-items     : flex-end;
+
+
+      .text::before {
+        content   : '';
+        position  : absolute;
+        width     : 100%;
+        height    : 100%;
+        top       : 0;
+        left      : 0;
+        background: black;
       }
     }
   }
@@ -1025,4 +1183,96 @@
         color: var(--newhighlight)
       }
     }
+  }
+
+  .outer {
+    display              : grid;
+    grid-template-columns: 1fr;
+    grid-template-rows   : repeat(2, 100vh);
+    grid-template-areas  : "one"
+      "two"
+  }
+
+  #one {
+    grid-area            : one;
+    background-size      : cover;
+    background-attachment: fixed;
+    background-repeat    : no-repeat;
+    display              : grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows   : repeat(4, 1fr);
+    position             : relative;
+  }
+
+  #one,
+  #two {
+    background-image: url("https://images.unsplash.com/photo-1458432449677-469b01f8ed08?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80");
+    background-image: url("/images/hamburg_2013_0485.JPG");
+  }
+
+  #two {
+    grid-area: two;
+    display  : grid;
+
+    background-attachment: fixed;
+    background-repeat    : no-repeat;
+    background-size      : cover;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows   : repeat(4, 1fr);
+    position             : relative;
+  }
+
+  #mask-one {
+    background    : linear-gradient(-15deg, blue 50%, #000 0%);
+    background    : linear-gradient(-15deg, #055c87 50%, #000 0%);
+    height        : 100%;
+    grid-column   : 1 / -1;
+    grid-row      : 1 / -1;
+    mix-blend-mode: multiply;
+  }
+
+  #mask-two {
+    background    : linear-gradient(-15deg, #000 50%, blue 0%);
+    background    : linear-gradient(-15deg, #000 50%, #055c87 0%);
+    height        : 100%;
+    grid-column   : 1 / -1;
+    grid-row      : 1 / -1;
+    mix-blend-mode: multiply;
+    z-index       : 2;
+    pointer-events: none;
+  }
+
+  #statue {
+    background-image     : url("https://www.snipstock.com/assets/cdn/png/d639517334df1db855d49d4f8e1828c5.png");
+    background-image     : url("/images/hamburg_2013_0499.JPG");
+    background-image     : url("/images/hamburg_2013_0868.webp");
+    background-size      : contain;
+    background-attachment: fixed;
+    height               : 100%;
+    width                : 100%;
+    grid-column          : 1 / -1;
+    grid-row             : 1 / -1;
+    background-repeat    : no-repeat;
+    z-index              : 1;
+    transition           : background-position 0.2s linear;
+    position             : relative;
+  }
+
+  .background-image {
+    position      : fixed;
+    width         : 100%;
+    height        : 100%;
+    //opacity   : 0.3;
+    mix-blend-mode: luminosity;
+    object-fit    : cover;
+    pointer-events: none;
+
+    &.foreground {
+      z-index: 3;
+    }
+  }
+
+  #special-offer,
+  .hero {
+    display: none;
   }
